--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "base-64": "^0.1.0",
     "expo": "~37.0.3",
     "firebase": "^7.14.3",
     "react": "~16.9.0",
