--- a/package.json
+++ b/package.json
@@ -8,15 +8,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-navigation/native": "^5.3.2",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.4.1",
     "base-64": "^0.1.0",
     "expo": "~37.0.3",
     "expo-linear-gradient": "^8.1.0",
     "firebase": "^7.14.3",
+    "formik": "^2.1.4",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-safe-area-context": "^1.0.2",
+    "react-native-screens": "^2.7.0",
+    "react-native-web": "~0.11.7",
+    "react-navigation": "^4.3.9",
+    "react-navigation-stack": "^2.5.1",
+    "yup": "^0.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
