--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/native": "^5.4.1",
+    "@react-navigation/native": "^5.3.2",
+    "@react-navigation/stack": "^5.3.9",
     "base-64": "^0.1.0",
     "expo": "~37.0.3",
     "expo-linear-gradient": "^8.1.0",
