--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-calendars": "^1.281.0",
     "react-native-check-box": "^2.1.7",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^1.0.2",
     "react-native-screens": "^2.8.0",
